Tag word wrapping and styling fixes
Some minor fixes for tags to avoid unnecessary word wrapping unless explicitly done (which we need to do for 2 tags that are otherwise too lengthy).

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -77,7 +77,14 @@
   align-items: flex-start;
 
   span.govuk-tag {
-    max-width: 162px;
+    white-space: nowrap;
+    width: fit-content;
+    max-width: fit-content;
+  }
+
+  span.app-tag--stacked .app-tag__line {
+    display: block;
+    white-space: nowrap;
   }
 }
 
